[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/Untitled.png" type="Texture" id=1]
[ext_resource path="res://Art/Bottom UI v 2.png" type="Texture" id=2]
[ext_resource path="res://Art/Top UI v 2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/grid.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Piece Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/ice_holder.gd" type="Script" id=6]
[ext_resource path="res://Scenes/ice_block.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/concrete_holder.gd" type="Script" id=8]
[ext_resource path="res://Scenes/concrete.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/slime_holder.gd" type="Script" id=10]
[ext_resource path="res://Scenes/slime.tscn" type="PackedScene" id=11]

[node name="Main" type="Node2D" index="0"]

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 509.0
margin_bottom = 961.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
expand = true
stretch_mode = 0

[node name="Bottom UI" type="Sprite" parent="." index="1"]

position = Vector2( 288, 980 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Top UI" type="Sprite" parent="." index="2"]

position = Vector2( 287, 96 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="grid" type="Node2D" parent="." index="3"]

script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
width = 8
height = 10
xStart = 64
yStart = 832
offset = 64
y_offset = 128
blank_spaces = PoolVector2Array( 0, 0, 7, 0, 0, 9, 7, 9, 3, 5, 4, 5, 4, 4, 3, 4 )
ice_spaces = PoolVector2Array( 3, 3, 4, 3, 3, 6, 4, 6 )
concrete_spaces = PoolVector2Array( 3, 2, 4, 2, 3, 7, 4, 7 )
slime_spaces = PoolVector2Array( 3, 1, 4, 1, 3, 8, 4, 8 )
lock_spaces = PoolVector2Array(  )
background = ExtResource( 5 )

[node name="find_matches" type="Timer" parent="grid" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="refill_timer" type="Timer" parent="grid" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="piece_tweener" type="Tween" parent="grid" index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="ice_holder" type="Node2D" parent="." index="4"]

script = ExtResource( 6 )
ice_block = ExtResource( 7 )

[node name="concrete_holder" type="Node2D" parent="." index="5"]

script = ExtResource( 8 )
concrete_block = ExtResource( 9 )

[node name="slime_holder" type="Node2D" parent="." index="6"]

script = ExtResource( 10 )
slime_block = ExtResource( 11 )

[node name="lock_holder" type="Node2D" parent="." index="7"]

[connection signal="destroy_concrete" from="grid" to="concrete_holder" method="_on_grid_destroy_concrete"]

[connection signal="destroy_ice" from="grid" to="ice_holder" method="_on_grid_destroy_ice"]

[connection signal="make_concrete" from="grid" to="concrete_holder" method="_on_grid_make_concrete"]

[connection signal="make_ice" from="grid" to="ice_holder" method="_on_grid_make_ice"]

[connection signal="make_slime" from="grid" to="slime_holder" method="_on_grid_make_slime"]

[connection signal="timeout" from="grid/find_matches" to="grid" method="_on_find_matches_timeout"]

[connection signal="timeout" from="grid/refill_timer" to="grid" method="_on_refill_timer_timeout"]

[connection signal="concrete_clear" from="concrete_holder" to="grid" method="_on_concrete_holder_concrete_clear"]


